--- a/raymarching_hybrid_live.html
+++ b/raymarching_hybrid_live.html
@@ -37,7 +37,7 @@
 
 	<body>
 		<div id="info">
-		<a href="http://threejs.org" target="_blank">three.js</a> - MMDLoader test<br />
+		<a href="http://threejs.org" target="_blank">three.js</a> - webgl raymarching hybrid - live scene<br />
 		Copyright
 		<a href="http://www.geocities.jp/higuchuu4/index_e.htm" target="_blank">Model Data</a>
 		<a href="http://www.nicovideo.jp/watch/sm13147122" target="_blank">Dance Data</a>
