--- a/raymarching_hybrid_live.html
+++ b/raymarching_hybrid_live.html
@@ -673,6 +673,9 @@ void main(void) {
 
 				var modelFile = 'models/mmd/miku/miku_v2.pmd';
 				var vmdFiles = [ 'models/mmd/vmd/wavefile_v2.vmd' ];
+				var cameraFiles = [ 'models/mmd/vmd/wavefile_camera.vmd' ];
+				var audioFile = 'models/mmd/audio/wavefile_short.mp3';
+				var audioParams = { delayTime: 160 * 1 / 30 };
 
 				helper = new THREE.MMDHelper( renderer );
 
@@ -685,22 +688,48 @@ void main(void) {
 
 					helper.add( mesh );
 					helper.setAnimation( mesh );
-
 					/*
 					 * Note: You must set Physics
 					 *       before you add mesh to scene or any other 3D object.
 					 * Note: Physics calculation is pretty heavy.
 					 *       It may not be acceptable for most mobile devices yet.
-					 */
+			 		 */
 					if ( ! isMobileDevice() ) {
 
 						helper.setPhysics( mesh );
 
 					}
 
-					helper.unifyAnimationDuration();
+					loader.loadVmds( cameraFiles, function ( vmd ) {
 
-					scene.add( mesh );
+						helper.setCamera( camera );
+
+						loader.pourVmdIntoCamera( camera, vmd );
+						helper.setCameraAnimation( camera );
+
+						loader.loadAudio( audioFile, function ( audio, listener ) {
+
+							listener.position.z = 1;
+
+							helper.setAudio( audio, listener, audioParams );
+
+							/*
+							 * Note: call this method after you set all animations
+							 *       including camera and audio.
+							 */
+							helper.unifyAnimationDuration();
+
+							scene.add( audio );
+							scene.add( listener );
+							scene.add( mesh );
+
+							ready = true;
+
+						}, onProgress, onError );
+
+
+					}, onProgress, onError );
+
 
 				}, onProgress, onError );
 
