アウトラインを無効化

--- a/raymarching_hybrid_live.html
+++ b/raymarching_hybrid_live.html
@@ -688,6 +688,7 @@ void main(void) {
 
 					helper.add( mesh );
 					helper.setAnimation( mesh );
+					helper.doOutlineDrawing = false;
 					/*
 					 * Note: You must set Physics
 					 *       before you add mesh to scene or any other 3D object.
