--- a/raymarching_mbox_lab.html
+++ b/raymarching_mbox_lab.html
@@ -363,7 +363,7 @@ void main(void) {
 
 		<script>
 
-			var camera, dummyCamera, scene, flyControls, orbitControls, renderer;
+			var camera, scene, flyControls, orbitControls, renderer;
 			var geometry, material, mesh;
 			var mouse = new THREE.Vector2( 0.5, 0.5 );
 			var canvas;
@@ -374,7 +374,7 @@ void main(void) {
 			var config = {
 				saveImage: function() {
 
-					renderer.render( scene, dummyCamera );
+					renderer.render( scene, camera );
 					window.open( canvas.toDataURL() );
 
 				},
@@ -389,8 +389,7 @@ void main(void) {
 
 				scene = new THREE.Scene();
 				camera = new THREE.PerspectiveCamera(35, 800/600);
-				dummyCamera = new THREE.Camera();
-				camera.position.set(0, 0, -10);
+				camera.position.set(10, 10, 10);
 				camera.lookAt( new THREE.Vector3( 0.0, 0.0, 0.0 ) );
 
 				geometry = new THREE.PlaneBufferGeometry( 2.0, 2.0 );
@@ -407,6 +406,7 @@ void main(void) {
 					fragmentShader: document.getElementById( 'fragment_shader' ).textContent
 				} );
 				mesh = new THREE.Mesh( geometry, material );
+				mesh.frustumCulled = false;
 				scene.add( mesh );
 
 				renderer = new THREE.WebGLRenderer();
@@ -489,7 +489,7 @@ void main(void) {
 				material.uniforms.debugCamera.value = config.camera !== 'GLSL';
 				material.uniforms.cameraPos.value = camera.getWorldPosition();
 				material.uniforms.cameraDir.value = camera.getWorldDirection();
-				renderer.render( scene, dummyCamera );
+				renderer.render( scene, camera );
 
 				stats.end();
 				requestAnimationFrame( render );
