--- a/raymarching_hybrid_live.html
+++ b/raymarching_hybrid_live.html
@@ -579,7 +579,7 @@ void main(void) {
 		<script>
 
 			var container, stats;
-			var camera, dummyCamera, scene, flyControls, orbitControls, renderer;
+			var camera, scene, flyControls, orbitControls, renderer;
 
 			var geometry, material, plane;
 			var mouse = new THREE.Vector2( 0.5, 0.5 );
