--- a/pathtracing_test.html
+++ b/pathtracing_test.html
@@ -37,11 +37,24 @@
 
 	<body>
 		<div id="info">
-		<a href="http://threejs.org" target="_blank">three.js</a> - webgl raymarching hybrid example<br />
+		<a href="http://threejs.org" target="_blank">three.js</a> - webgl pathtracing example<br />
 		Copyright
 		<a href="http://www.geocities.jp/higuchuu4/index_e.htm" target="_blank">Model Data</a>
 		<a href="http://www.nicovideo.jp/watch/sm13147122" target="_blank">Dance Data</a>
 		</div>
+
+		<script id="vertex_shader" type="x-shader/x-vertex">
+
+			attribute vec3 position;
+
+			void main(void) {
+
+				gl_Position = vec4(position, 1.0);
+
+			}
+
+		</script>
+
 		<script id="fragment_shader" type="x-shader/x-fragment">
 
 #extension GL_EXT_frag_depth : require
@@ -69,8 +82,8 @@ uniform float shadowIntensity;
 uniform float shadowSharpness;
 
 // consts
-const float EPS = 0.0001;
-const float OFFSET = EPS * 2000.0;
+const float EPS = 1e-4;
+const float OFFSET = EPS * 10.0;
 const float PI = 3.14159;
 
 
@@ -370,27 +383,63 @@ void main(void) {
 
 		</script>
 
-		<script id="vertex_shader" type="x-shader/x-vertex">
+		<script id="float_fragment_shader" type="x-shader/x-fragment">
+precision highp float;
 
-			attribute vec3 position;
+// uniforms
+uniform float time;
+uniform sampler2D buffer;
+uniform vec2 mouse;
+uniform vec2 resolution;
 
-			void main(void) {
+// camera
+uniform vec3 cameraPosition;
+uniform mat4 viewMatrix;
 
-				gl_Position = vec4(position, 1.0);
+uniform mat4 cameraWorldMatrix;
+uniform mat4 cameraProjectionMatrixInverse;
+uniform mat4 cameraViewProjectionpMatrixInverse;
+uniform float cameraNear;
+uniform float cameraFar;
 
-			}
+// consts
+const float EPS = 1e-4;
+const float OFFSET = EPS * 10.0;
+const float PI = 3.14159;
 
+void main(void) {
+	// previous color
+	vec2 uv = gl_FragCoord.xy / resolution.xy;
+	vec4 prevColor = texture2D( buffer, uv );
+
+	// fragment position
+	vec2 fragPos = ( gl_FragCoord.xy * 2.0 - resolution ) / resolution;
+
+	// camera and ray
+	vec4 rayTip = cameraWorldMatrix * cameraProjectionMatrixInverse * vec4( fragPos.xy, 1.0, 1.0 );
+	vec3 ray = normalize( rayTip.xyz );
+
+	gl_FragColor = vec4( prevColor.rgb + vec3( 0.5 ), 1.0 );
+}
+		</script>
+
+		<script id="render_fragment_shader" type="x-shader/x-fragment">
+precision highp float;
+
+uniform float time;
+uniform int frame;
+uniform vec2 resolution;
+uniform sampler2D buffer;
+
+void main(void) {
+	vec2 uv = gl_FragCoord.xy / resolution.xy;
+	vec4 c = texture2D( buffer, uv );
+	gl_FragColor = vec4( c.rgb / float( frame ), 1.0 );
+}
 		</script>
 
 		<script src="js/three.min.js"></script>
 		<script src="js/controls/OrbitControls.js"></script>
-
-		<script src="js/libs/charsetencoder.min.js"></script>
-		<script src="js/libs/ammo.js"></script>
-		<script src="js/loaders/TGALoader.js"></script>
-		<script src="js/loaders/MMDLoader.js"></script>
-		<script src="js/animation/CCDIKSolver.js"></script>
-		<script src="js/animation/MMDPhysics.js"></script>
 
 		<script src="js/Detector.js"></script>
 		<script src="js/libs/stats.min.js"></script>
@@ -399,9 +448,9 @@ void main(void) {
 		<script>
 
 			var container, stats;
-			var camera, flyControls, orbitControls, renderer;
+			var camera, orbitControls, renderer;
 			var renderQuad, mmdMesh;
-			var floatQuad, readBuffer, writeBuffer;
+			var floatQuad, initBuffer, readBuffer, writeBuffer, frame = 0;
 
 			var mouse = new THREE.Vector2( 0.5, 0.5 );
 			var helper;
@@ -449,9 +498,30 @@ void main(void) {
 				};
 			}
 
-			function init() {
+			function createDataTexture( width, height ) {
+				var data = new Float32Array( width * height * 4 );
+			
+				for (var k = 0, kl = data.length; k < kl; k += 4) {
+					data[k]      = 0.0;
+					data[k + 1]  = 0.0;
+					data[k + 2]  = 0.0;
+					data[k + 3]  = 1.0;
+				}
+			
+				var texture = new THREE.DataTexture(
+					data,
+					width,
+					height,
+					THREE.RGBAFormat,
+					THREE.FloatType);
+			
+				texture.needsUpdate = true;
+			
+				return texture;
+			}
 
-				var renderTarget = new THREE.WebGLRenderTarget( config.resolution, config.resolution, {
+			function createRenderTarget( width, height ) {
+				return new THREE.WebGLRenderTarget( width, height, {
 					wrapS: THREE.RepeatWrapping,
 					wrapT: THREE.RepeatWrapping,
 					minFilter: THREE.NearestFilter,
@@ -461,9 +531,13 @@ void main(void) {
 					stencilBuffer: false,
 					depthBuffer: false
 				});
+			}
 
-				readBuffer = renderTarget;
-				writeBuffer = renderTarget.clone();
+			function init() {
+
+				initBuffer  = createDataTexture(  config.resolution, config.resolution );
+				readBuffer  = createRenderTarget( config.resolution, config.resolution );
+				writeBuffer = readBuffer.clone();
 
 				container = document.createElement( 'div' );
 				document.body.appendChild( container );
@@ -478,40 +552,28 @@ void main(void) {
 						resolution: { type: 'v2', value: new THREE.Vector2( config.resolution, config.resolution ) },
 						mouse: { type: 'v2', value: mouse },
 						time: { type: 'f', value: 0.0 },
+						frame: { type: 'i', value: frame },
+						buffer: { type: 't', value: readBuffer },
 
 						cameraWorldMatrix: { type: 'm4', value: camera.matrixWorld },
 						cameraProjectionMatrixInverse: { type: 'm4', value: new THREE.Matrix4().getInverse( camera.projectionMatrix ) },
 						cameraViewProjectionpMatrixInverse: { type: 'm4', value: new THREE.Matrix4() },
 						cameraNear: { type: 'f', value: camera.near },
 						cameraFar:  { type: 'f', value: camera.far },
-
-						shadowType: { type: 'i', value: config.shadowType },
-						shadowIntensity: { type: 'f', value: config.shadowIntensity },
-						shadowSharpness: { type: 'f', value: config.shadowSharpness },
 					},
 					vertexShader: document.getElementById( 'vertex_shader' ).textContent,
-					fragmentShader: document.getElementById( 'fragment_shader' ).textContent
+					fragmentShader: document.getElementById( 'float_fragment_shader' ).textContent
 				} );
 
 				// render quad
 				renderQuad = createQuadScene( {
 					uniforms: {
 						resolution: { type: 'v2', value: new THREE.Vector2( config.resolution, config.resolution ) },
-						mouse: { type: 'v2', value: mouse },
-						time: { type: 'f', value: 0.0 },
-
-						cameraWorldMatrix: { type: 'm4', value: camera.matrixWorld },
-						cameraProjectionMatrixInverse: { type: 'm4', value: new THREE.Matrix4().getInverse( camera.projectionMatrix ) },
-						cameraViewProjectionpMatrixInverse: { type: 'm4', value: new THREE.Matrix4() },
-						cameraNear: { type: 'f', value: camera.near },
-						cameraFar:  { type: 'f', value: camera.far },
-
-						shadowType: { type: 'i', value: config.shadowType },
-						shadowIntensity: { type: 'f', value: config.shadowIntensity },
-						shadowSharpness: { type: 'f', value: config.shadowSharpness },
+						frame: { type: 'i', value: frame },
+						buffer: { type: 't', value: writeBuffer },
 					},
 					vertexShader: document.getElementById( 'vertex_shader' ).textContent,
-					fragmentShader: document.getElementById( 'fragment_shader' ).textContent
+					fragmentShader: document.getElementById( 'render_fragment_shader' ).textContent
 				} );
 
 				var ambient = new THREE.AmbientLight( 0x666666 );
@@ -520,8 +582,6 @@ void main(void) {
 				var directionalLight = new THREE.DirectionalLight( 0x887766 );
 				directionalLight.position.set( -1, 1, 1 ).normalize();
 				renderQuad.scene.add( directionalLight );
-
-				//
 
 				renderer = new THREE.WebGLRenderer();
 				//renderer.setPixelRatio( window.devicePixelRatio );
@@ -538,6 +598,17 @@ void main(void) {
 					return;
 				}
 
+				// check OES_texture_float
+				//if ( ! renderer.extensions.get( "OES_texture_float" ) ) {
+				//	alert( "No OES_texture_float support for float textures." );
+				//	return;
+				//}
+				var ext = gl.getExtension('OES_texture_float');
+				if( ext == null ) {
+					alert('float texture not supported');
+					return;
+				}
+
 				orbitControls = new THREE.OrbitControls( camera, canvas );
 				orbitControls.enablePan = true;
 				orbitControls.keyPanSpeed = 0.01;
@@ -550,63 +621,17 @@ void main(void) {
 				orbitControls.autoRotateSpeed = 0.0;
 				orbitControls.target = new THREE.Vector3( 0.0, 10.0, 0.0 );
 
-				// model
-
-				var onProgress = function ( xhr ) {
-					if ( xhr.lengthComputable ) {
-						var percentComplete = xhr.loaded / xhr.total * 100;
-						console.log( Math.round(percentComplete, 2) + '% downloaded' );
-					}
-				};
-
-				var onError = function ( xhr ) {
-				};
-
-				var modelFile = 'models/mmd/miku/miku_v2.pmd';
-				var vmdFiles = [ 'models/mmd/vmd/wavefile_v2.vmd' ];
-
-				helper = new THREE.MMDHelper( renderer );
-
-				var loader = new THREE.MMDLoader();
-				loader.setDefaultTexturePath( './models/mmd/default/' );
-
-				loader.load( modelFile, vmdFiles, function ( object ) {
-
-					mmdMesh = object;
-
-					helper.add( mmdMesh );
-					helper.setAnimation( mmdMesh );
-
-					/*
-					 * Note: You must set Physics
-					 *       before you add mmdMesh to scene or any other 3D object.
-					 * Note: Physics calculation is pretty heavy.
-					 *       It may not be acceptable for most mobile devices yet.
-			 		 */
-					if ( ! isMobileDevice() ) {
-
-						helper.setPhysics( mmdMesh );
-
-					}
-
-					helper.unifyAnimationDuration();
-
-					renderQuad.scene.add( mmdMesh );
-
-				}, onProgress, onError );
-
-				//
 				window.addEventListener( 'resize', onWindowResize, false );
 
 				var gui = new dat.GUI();
 				gui.add( config, 'saveImage' ).name( 'Save Image' );
-				gui.add( config, 'camera', [ 'GLSL', 'Orbit'/*, 'Fly'*/ ] ).name( 'Camera' );
+				gui.add( config, 'camera', [ 'GLSL', 'Orbit' ] ).name( 'Camera' );
 
-				var shadowFolder = gui.addFolder('Shadow');
-				shadowFolder.add( config, 'shadowType', { Hard: 0, Soft1: 1, Soft2: 2 } ).name( 'Type');
-				shadowFolder.add( config, 'shadowIntensity', 0.0, 1.0 ).name( 'Intensity' );
-				shadowFolder.add( config, 'shadowSharpness', 0.0, 100.0 ).name( 'Sharpness' );
-				shadowFolder.open();
+				// var shadowFolder = gui.addFolder('Shadow');
+				// shadowFolder.add( config, 'shadowType', { Hard: 0, Soft1: 1, Soft2: 2 } ).name( 'Type');
+				// shadowFolder.add( config, 'shadowIntensity', 0.0, 1.0 ).name( 'Intensity' );
+				// shadowFolder.add( config, 'shadowSharpness', 0.0, 100.0 ).name( 'Sharpness' );
+				// shadowFolder.open();
 
 				gui.add( config, 'resolution', [ '256', '512', '800', 'full' ] ).name( 'Resolution' ).onChange( function( value ) {
 
@@ -656,53 +681,55 @@ void main(void) {
 
 				stats.begin();
 
-				if ( config.camera === "Fly" ) {
-
-					flyControls.update( delta );
-
-				} else if ( config.camera === "Orbit" ) {
-
+				if ( config.camera === "Orbit" ) {
 					orbitControls.update();
-
 				}
 
-				renderQuad.material.uniforms.resolution.value = new THREE.Vector2( canvas.width, canvas.height );
-				renderQuad.material.uniforms.mouse.value = mouse;
-				renderQuad.material.uniforms.time.value = timestamp * 0.001;
+				// float quad
+				{
+					// set uniforms
+					floatQuad.material.uniforms.resolution.value = new THREE.Vector2( canvas.width, canvas.height );
+					floatQuad.material.uniforms.mouse.value = mouse;
+					floatQuad.material.uniforms.time.value = timestamp * 0.001;
+					floatQuad.material.uniforms.frame.value = frame;
+					floatQuad.material.uniforms.buffer.value = frame === 0 ? initBuffer : readBuffer;
 
-				var cameraViewProjectionpMatrixInverse = camera.matrixWorld.clone();
-				var cameraViewInverseMatrix = camera.matrixWorld;
-				var cameraProjectionInverseMatrix = new THREE.Matrix4().getInverse( camera.projectionMatrix );
-				//cameraViewProjectionpMatrixInverse.multiplyMatrices( cameraViewInverseMatrix, cameraProjectionInverseMatrix );
-				cameraViewProjectionpMatrixInverse.multiply( cameraViewInverseMatrix );
-				cameraViewProjectionpMatrixInverse.multiply( cameraProjectionInverseMatrix );
-				renderQuad.material.uniforms.cameraViewProjectionpMatrixInverse.value = cameraViewProjectionpMatrixInverse;
+					// set camera uniforms
+					{
+						var cameraViewProjectionpMatrixInverse = camera.matrixWorld.clone();
+						var cameraViewInverseMatrix = camera.matrixWorld;
+						var cameraProjectionInverseMatrix = new THREE.Matrix4().getInverse( camera.projectionMatrix );
+						//cameraViewProjectionpMatrixInverse.multiplyMatrices( cameraViewInverseMatrix, cameraProjectionInverseMatrix );
+						cameraViewProjectionpMatrixInverse.multiply( cameraViewInverseMatrix );
+						cameraViewProjectionpMatrixInverse.multiply( cameraProjectionInverseMatrix );
+						floatQuad.material.uniforms.cameraViewProjectionpMatrixInverse.value = cameraViewProjectionpMatrixInverse;
 
-				renderQuad.material.uniforms.cameraWorldMatrix.value = camera.matrixWorld;
-				renderQuad.material.uniforms.cameraProjectionMatrixInverse.value = new THREE.Matrix4().getInverse( camera.projectionMatrix );
+						floatQuad.material.uniforms.cameraWorldMatrix.value = camera.matrixWorld;
+						floatQuad.material.uniforms.cameraProjectionMatrixInverse.value = new THREE.Matrix4().getInverse( camera.projectionMatrix );
 
-				renderQuad.material.uniforms.cameraNear.value = camera.near;
-				renderQuad.material.uniforms.cameraFar.value  = camera.far;
+						floatQuad.material.uniforms.cameraNear.value = camera.near;
+						floatQuad.material.uniforms.cameraFar.value  = camera.far;
+					}
 
-				renderQuad.material.uniforms.shadowType.value = config.shadowType;
-				renderQuad.material.uniforms.shadowIntensity.value = config.shadowIntensity;
-				renderQuad.material.uniforms.shadowSharpness.value = config.shadowSharpness;
-				
-				renderer.render( renderQuad.scene, camera );
+					renderer.render( floatQuad.scene, camera, writeBuffer );
+				}
+
+				// render quad
+				{
+					renderQuad.material.uniforms.resolution.value = new THREE.Vector2( canvas.width, canvas.height );
+					renderQuad.material.uniforms.frame.value = frame;
+					renderQuad.material.uniforms.buffer.value = writeBuffer;
+
+					renderer.render( renderQuad.scene, camera );
+				}
+
+				// swap buffers
+				var tmpBuffer = writeBuffer;
+				writeBuffer = readBuffer;
+				readBuffer = tmpBuffer;
 
 				stats.end();
-
-				if ( mmdMesh ) {
-
-					helper.animate( delta );
-					helper.render( renderQuad.scene, camera );
-
-				} else {
-
-					renderer.clear();
-					renderer.render( renderQuad.scene, camera );
-
-				}
+				frame++;
 
 			}
 
